@@ -26,8 +26,8 @@ public class DepartmentsTest {
     @Test
     public void whenMissedAndSortNaturalOrderWithHashSet() {
         System.out.println(new Throwable().getStackTrace()[0].getMethodName());
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
         List<String> result = Departments.fillGapsByHashSet(input, Comparator.naturalOrder());
         assertThat(result, is(expect));
     }
@@ -35,8 +35,8 @@ public class DepartmentsTest {
     @Test
     public void whenMissedAndSortReversOrderWithHashSet() {
         System.out.println(new Throwable().getStackTrace()[0].getMethodName());
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1/ssk2", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1/ssk2", "k2/sk1/ssk1");
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1", "k1/sk1");
         List<String> result = Departments.fillGapsByHashSet(input, new DepDescComp());
         assertThat(result, is(expect));
     }
@@ -44,8 +44,8 @@ public class DepartmentsTest {
     @Test
     public void whenMissedAndSortNaturalOrderWithTreeSet() {
         System.out.println(new Throwable().getStackTrace()[0].getMethodName());
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
         List<String> result = Departments.fillGapsByTreeSet(input, Comparator.naturalOrder());
         assertThat(result, is(expect));
     }
@@ -53,8 +53,8 @@ public class DepartmentsTest {
     @Test
     public void whenMissedAndSortReversOrderWithTreeSet() {
         System.out.println(new Throwable().getStackTrace()[0].getMethodName());
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1/ssk2", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1/ssk2", "k2/sk1/ssk1");
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1", "k1/sk1");
         List<String> result = Departments.fillGapsByTreeSet(input, new DepDescComp());
         assertThat(result, is(expect));
     }
@@ -62,8 +62,8 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         System.out.println(new Throwable().getStackTrace()[0].getMethodName());
-        List<String> input = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
+        List<String> input = List.of("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
         List<String> result = Departments.fillGapsByHashSet(input, Comparator.naturalOrder());
         assertThat(result, is(expect));
     }
